--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -12,11 +12,11 @@
    "metadata": {},
    "source": [
     "> **Note the following:** \n",
-    "> 1. This is an example of how to structure your inaugural project.\n",
-    "> 1. Remember the general advice on structuring and commenting your code from [lecture 5](https://numeconcopenhagen.netlify.com/lectures/week05/).\n",
-    "> 1. Remember this [guide](https://numeconcopenhagen.netlify.com/guides/markdown/) on markdown and (a bit of) latex.\n",
-    "> 1. Turn on automatic numbering by pressing <kbd>Ctrl</kbd>+<kbd>B</kbd> and click on the small icon on top of the table of contents with numbers in it.\n",
-    "> 1. The inauguralproject.py file includes a function which could be used multiple times in this notebook."
+    "> 1. This is an example of how to structure your **inaugural project**.\n",
+    "> 1. Remember the general advice on structuring and commenting your code from [lecture 5](https://numeconcopenhagen.netlify.com/lectures/Workflow_and_debugging).\n",
+    "> 1. Remember this [guide](https://www.markdownguide.org/basic-syntax/) on markdown and (a bit of) latex.\n",
+    "> 1. Turn on automatic numbering by clicking on the small icon on top of the table of contents in the left sidebar.\n",
+    "> 1. The `inauguralproject.py` file includes a function which can be used multiple times in this notebook."
    ]
   },
   {
@@ -202,10 +202,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.4"
   },
   "toc-autonumbering": true
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
